    caught and a PlatformNotSupportedException is thrown instead
  * DrawInto methods:
    + New overloads that allow custom quantizing.
    + New overloads that allow resizing.
    - Using alpha blending even if a ditherer is used for the drawing.
+ BitmapExtensions class:
  + New Resize overload that does not use Graphics.DrawImage internally.
+ MetafileExtensions class:
  + New ToBitmap overload with keepAspectRatio parameter
+ New ScalingMode enum for Resize, DrawInto, DrawImage and DrawBitmapData extension methods

! KGySoft.Drawing.Imaging namespace:
====================================
! IBitmapData interface: BackColor and AlphaThreshold properties are now exposed by this interface. You can
  define these when you use the Get[Readable/Writable/ReadWrite]BitmapData methods anyway.
! New IQuantized/IDitherer property: InitializeReliesOnContent - when returns false it helps to optimize performance
  when quantizing/dithering is used for resizing or blended sources.
+ The BitmapDataFactory class has been made public. From now on you can create completely managed bitmap data on any
  platform with any pixel format.
+ New BitmapDataExtensions class to provide similar functionality some for IBitmapData instances that are in the
  already existing BitmapExtensions and ImageExtensions classes such as DrawInto/Quantize/Dither/Clear/etc,
  as well as adding some new methods such as CopyTo/Clip/Clone
+ Color32 struct: new ToOpaque method
+ PredefinedColorsQuantizer class:
  + New Argb8888 method
  + The FromBitmapData method has been made public


~~~~~~~~~
! v5.1.0:
~~~~~~~~~

* Assembly changes:
===================
* Referencing KGySoft.CoreLibraries 5.1.1

! KGySoft.Drawing namespace:
============================
! BitmapExtensions class
  ! The GetColorCount method does not transform pixels of wide color formats to 32-bit colors anymore so it may
    return a different result (an accurate one) for Bitmaps with 16-bit grayscale, 48-bit and 64-bit PixelFormats.