@@ -23,8 +23,9 @@
     - Using alpha blending even if a ditherer is used for the drawing.
 + BitmapExtensions class:
   + New Resize overload that does not use Graphics.DrawImage internally.
-+ MetafileExtensions class:
+* MetafileExtensions class:
   + New ToBitmap overload with keepAspectRatio parameter
+  - Using a custom resizing routine for anti-aliasing to prevent process-wide locking used by Graphics.DrawImage
 + New ScalingMode enum for Resize, DrawInto, DrawImage and DrawBitmapData extension methods
 
 ! KGySoft.Drawing.Imaging namespace:
